@@ -1,5 +1,9 @@
 2005-03-24  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcolormapeditor.c: use a GimpColorHexEntry widget.
+
+2005-03-24  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/bmp/bmpread.c: applied a patch from David Costanzo that
 	fixes handling of odd-length pixel encodings in "absolute mode" of
 	RLE4 compressed data (bug #171306).
